Archive2/4e/7d001d16b133b6/output
main.cpp: In function 'int main()':
main.cpp:276:9: error: 'allocatator' was not declared in this scope
         allocatator.deallocate(n2, 2);
         ^
main.cpp:283:9: error: 'allocatator' was not declared in this scope
         allocatator.deallocate(n3, 3);
         ^
